--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -253,6 +253,7 @@ test_pipeline:
     keys:
       - img
       - points
+      - pooled_bbox
       - gt_bboxes_3d
       - gt_labels_3d
       - gt_masks_bev
