--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -205,6 +205,9 @@ test_pipeline:
     reduce_beams: ${reduce_beams}
     load_augmented: ${load_augmented}
   -
+    type: LoadPooledBBox
+    method: semantic
+  -
     type: LoadPointsFromMultiSweeps
     sweeps_num: 9
     load_dim: ${load_dim}
@@ -242,6 +245,11 @@ test_pipeline:
     type: PointsRangeFilter
     point_cloud_range: ${point_cloud_range}
   -
+    type: BBoxTransformer
+    voxel_size: [0.75,0.75]
+    num_bbox: 10
+    bev_range: [-54., -54., 54., 54.]
+  -
     type: ImageNormalize
     mean: [0.485, 0.456, 0.406]
     std: [0.229, 0.224, 0.225]
@@ -256,6 +264,7 @@ test_pipeline:
       - gt_bboxes_3d
       - gt_labels_3d
       - gt_masks_bev
+      # - pooled_bbox
     meta_keys:
       - camera_intrinsics
       - camera2ego
