--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -264,7 +264,7 @@ test_pipeline:
       - gt_bboxes_3d
       - gt_labels_3d
       - gt_masks_bev
-      # - pooled_bbox
+      - pooled_bbox
     meta_keys:
       - camera_intrinsics
       - camera2ego
