--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
@@ -1,8 +1,8 @@
 model:
   fuser:
-    type: ConvFuser
-    in_channels: [80, 256]
-    out_channels: 256
+    # type: ConvFuser
+    # in_channels: [80, 256]
+    # out_channels: 256
 
   calico:
     lidar_projector:
