add load from in config

--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/convfuser.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/convfuser.yaml
@@ -3,3 +3,5 @@ model:
     type: ConvFuser
     in_channels: [80, 256]
     out_channels: 256
+
+load_from: "/workspace/jiachen_results/calico/epoch_20_lr_1e-4/latest.pth"
