add fewshot learning setting in config

--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/convfuser_calico_0.05.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/convfuser_calico_0.05.yaml
@@ -5,6 +5,7 @@ model:
     out_channels: 256
 data:
   train:
+  train:
     dataset:
       ann_file: ${dataset_root + "nuscenes_infos_train_0.05.pkl"}
 
