--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/convfuser_calico_0.2.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/convfuser_calico_0.2.yaml
@@ -5,7 +5,8 @@ model:
     out_channels: 256
 data:
   train:
+  train:
     dataset:
-      ann_file: ${dataset_root + "nuscenes_infos_train_0.05.pkl"}
+      ann_file: ${dataset_root + "nuscenes_infos_train_0.2.pkl"}
 
 load_from: "/workspace/jiachen_results/calico/epoch_20_lr_1e-4/latest.pth"
