--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico_2.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico_2.yaml
@@ -3,16 +3,17 @@ model:
 
   calico:
     lidar_projector:
-      type: CNNProjector
-      channels: [80, 256, 128, 64]
+      type: SharedProjector
+      lidar_channel: 80
+      camera_channel: 256
+      channels: [256, 128, 64]
       kernel_size: 3
       stride: 1
-    camera_projector:
-      type: CNNProjector    
-      channels: [256, 256, 128, 64]
-      kernel_size: 3
-      stride: 1
-
+    # camera_projector:
+    #   type: SharedProjector    
+    #   channels: [256, 256, 128, 64]
+    #   kernel_size: 3
+    #   stride: 1
     loss:
       type: ClipLoss
       
