add shared projector

--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico_2.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico_2.yaml
@@ -19,7 +19,7 @@ model:
       
     roi_align:
       spatial_scale: 0.125
-      output_size: 
+      output_size: 7
       sampling_ratio: 2
 
 data:
