--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico_2.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico_2.yaml
@@ -16,6 +16,7 @@ model:
     #   stride: 1
     loss:
       type: ClipLoss
+      local_loss: True
       
     roi_align:
       spatial_scale: 0.125
