--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
@@ -15,7 +15,7 @@ model:
 
     loss:
       type: ClipLoss
-      local_loss: True
+      batch_loss: True
       
     roi_align:
       spatial_scale: 0.125
