--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -229,12 +229,18 @@ test_pipeline:
     rot_lim: [0.0, 0.0]
     rand_flip: false
     is_train: false
+  # -
+  #   type: GlobalRotScaleTrans
+  #   resize_lim: [1.0, 1.0]
+  #   rot_lim: [0.0, 0.0]
+  #   trans_lim: 0.0
+  #   is_train: false
   -
     type: GlobalRotScaleTrans
-    resize_lim: [1.0, 1.0]
-    rot_lim: [0.0, 0.0]
-    trans_lim: 0.0
-    is_train: false
+    resize_lim: ${augment3d.scale}
+    rot_lim: ${augment3d.rotate}
+    trans_lim: ${augment3d.translate}
+    is_train: true
   -
     type: LoadBEVSegmentation
     dataset_root: ${dataset_root}
