--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -222,6 +222,8 @@ test_pipeline:
     with_label_3d: true
     with_attr_label: False
   -
+    type: RandomFlip3D
+  -
     type: ImageAug3D
     final_dim: ${image_size}
     resize_lim: ${augment2d.resize[1]}
