--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
@@ -24,6 +24,9 @@ model:
 
 data:
   samples_per_gpu: 4
+  # train:
+  #     dataset:
+  #       ann_file: ${dataset_root + "nuscenes_infos_train_0.05.pkl"}
 
 optimizer:
   type: AdamW
