--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -66,6 +66,8 @@ train_pipeline:
   -
     type: LoadPooledBBox
     method: semantic
+    num_bbox: 50
+    bev_range: [-54., -54., 54., 54.]
   -
     type: LoadPointsFromMultiSweeps
     sweeps_num: 9
@@ -152,7 +154,7 @@ train_pipeline:
   -
     type: BBoxTransformer
     voxel_size: [0.075,0.075]
-    num_bbox: 20
+    num_bbox: 50
     bev_range: [-54., -54., 54., 54.]
   -
     type: ImageNormalize
@@ -207,6 +209,8 @@ test_pipeline:
   -
     type: LoadPooledBBox
     method: semantic
+    num_bbox: 50
+    bev_range: [-54., -54., 54., 54.]
   -
     type: LoadPointsFromMultiSweeps
     sweeps_num: 9
@@ -255,7 +259,7 @@ test_pipeline:
   -
     type: BBoxTransformer
     voxel_size: [0.075,0.075]
-    num_bbox: 20
+    num_bbox: 50
     bev_range: [-54., -54., 54., 54.]
   -
     type: ImageNormalize
