--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -134,6 +134,7 @@ train_pipeline:
     rot_lim: ${augment3d.rotate}
     trans_lim: ${augment3d.translate}
     is_train: true
+    is_pretrain: true
   -
     type: LoadBEVSegmentation
     dataset_root: ${dataset_root}
@@ -239,6 +240,7 @@ test_pipeline:
     rot_lim: [0.0, 0.0]
     trans_lim: 0.0
     is_train: false
+    is_pretrain: false
   # -
   #   type: GlobalRotScaleTrans
   #   resize_lim: ${augment3d.scale}
