--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -182,10 +182,12 @@ train_pipeline:
     keys:
       - img
       - points
+      - points_2
       - gt_bboxes_3d
       - gt_labels_3d
       - gt_masks_bev
       - pooled_bbox
+      - pooled_bbox_2
     meta_keys:
       - camera_intrinsics
       - camera2ego
@@ -195,6 +197,7 @@ train_pipeline:
       - lidar2image
       - img_aug_matrix
       - lidar_aug_matrix
+      - lidar_aug_matrix_2
 
 test_pipeline:
   -
