--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -134,7 +134,7 @@ train_pipeline:
     rot_lim: ${augment3d.rotate}
     trans_lim: ${augment3d.translate}
     is_train: true
-    is_pretrain: false
+    is_pretrain: true
   -
     type: LoadBEVSegmentation
     dataset_root: ${dataset_root}
@@ -182,12 +182,12 @@ train_pipeline:
     keys:
       - img
       - points
-      # - points_2
+      - points_2
       - gt_bboxes_3d
       - gt_labels_3d
       - gt_masks_bev
       - pooled_bbox
-      # - pooled_bbox_2
+      - pooled_bbox_2
     meta_keys:
       - camera_intrinsics
       - camera2ego
@@ -197,7 +197,7 @@ train_pipeline:
       - lidar2image
       - img_aug_matrix
       - lidar_aug_matrix
-      # - lidar_aug_matrix_2
+      - lidar_aug_matrix_2
 
 test_pipeline:
   -
@@ -243,7 +243,7 @@ test_pipeline:
     rot_lim: [0.0, 0.0]
     trans_lim: 0.0
     is_train: false
-    is_pretrain: false
+    is_pretrain: true
   # -
   #   type: GlobalRotScaleTrans
   #   resize_lim: ${augment3d.scale}
@@ -278,10 +278,12 @@ test_pipeline:
     keys:
       - img
       - points
+      - points_2
       - gt_bboxes_3d
       - gt_labels_3d
       - gt_masks_bev
       - pooled_bbox
+      - pooled_bbox_2
     meta_keys:
       - camera_intrinsics
       - camera2ego
@@ -291,6 +293,7 @@ test_pipeline:
       - lidar2image
       - img_aug_matrix
       - lidar_aug_matrix
+      - lidar_aug_matrix_2
 
 data:
   samples_per_gpu: 1
