--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
@@ -16,6 +16,7 @@ model:
     loss:
       type: ClipLoss
       # batch_loss: [True,4]
+      local_loss: True
       
     roi_align:
       spatial_scale: 0.125
