--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
@@ -15,8 +15,8 @@ model:
 
     loss:
       type: ClipLoss
-      # batch_loss: [True,4]
-      local_loss: True
+      batch_loss: [True,2]
+      # local_loss: True
       
     roi_align:
       spatial_scale: 0.125
