--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
@@ -15,7 +15,7 @@ model:
 
     loss:
       type: ClipLoss
-      batch_loss: [True,2]
+      # batch_loss: [True,2]
       # local_loss: True
       
     roi_align:
