--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -243,7 +243,7 @@ test_pipeline:
     rot_lim: [0.0, 0.0]
     trans_lim: 0.0
     is_train: false
-    is_pretrain: false
+    is_pretrain: True
   # -
   #   type: GlobalRotScaleTrans
   #   resize_lim: ${augment3d.scale}
