--- a/configs/nuscenes/default.yaml
+++ b/configs/nuscenes/default.yaml
@@ -155,7 +155,7 @@ train_pipeline:
   -
     type: BBoxTransformer
     voxel_size: [0.075,0.075]
-    num_bbox: 50
+    num_bbox: 10
     bev_range: [-54., -54., 54., 54.]
   -
     type: ImageNormalize
@@ -243,7 +243,7 @@ test_pipeline:
     rot_lim: [0.0, 0.0]
     trans_lim: 0.0
     is_train: false
-    is_pretrain: True
+    is_pretrain: false
   # -
   #   type: GlobalRotScaleTrans
   #   resize_lim: ${augment3d.scale}
