--- a/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
+++ b/configs/nuscenes/det/transfusion/secfpn/camera+lidar/swint_v0p075/calico.yaml
@@ -24,7 +24,7 @@ model:
       sampling_ratio: 2
 
 data:
-  samples_per_gpu: 1
+  samples_per_gpu: 2
   # train:
   #     dataset:
   #       ann_file: ${dataset_root + "nuscenes_infos_train_0.05.pkl"}
@@ -35,4 +35,4 @@ optimizer:
   weight_decay: 0.01
 
 
-load_from: "pretrained/bevfusion-det.pth"
+# load_from: "pretrained/bevfusion-det.pth"
